[PIDM-1484] fix